2.5.3 (October XX, 2019)
 - Added flag `IPAddressesEnabled` into config to enable/disable sending machineName and machineIp when data is posted in headers.

2.5.2 (September 25, 2019)
 - Update docker base image to patch security vulnerabilities.

2.5.1 (September 9, 2019)
 - Fixed issue with metrics keys not properly deleted.

2.5.0 (August 14, 2019)
 - Added lambda calculation for Events and Impressions.
 - Added lambda metric in Dashboard when Sync is running as Producer mode.
 - Moved Sync version to the top-right and removed card that displayed it.
 - Added slack notification when Sync is started.

2.4.1 (July 25, 2019)
 - Removed '@here' in slack messages.

2.4.0 (July 23, 2019)
 - Added support for TLS connections to redis.
 - Updated config parameters to have consistency between them. Several parameters will be deprecated in future versions.
 - Accept true, "on" and "yes" as values for enabling options in docker environment variables.
 - Merged controllers for web admin dashboard.
 - Added label in Sync Dashboard to indicate on which mode it started (Synchronizer or Proxy).
 - Added task to check Sync environment and added healthySince property to healtheck endpoint.
 - Added healthcheck into Sync Dashboard.
 - Added logic to refresh all the metrics in Dashboard without loading again it.
 - Fixed counter for trafficTypes when a particular split is updated.

2.3.0 (May 30, 2019)
 - Added support for track properties.
 - Added cache overlay on top of redis for fetching events.

2.2.1 (May 2, 2019)
 - Fixed possible (but unlikely) issue when expiring traffic type.

2.2.0 (April 30, 2019)
 - Added logic to store Dynamic Configurations when splitChanges is called in redis mode.
 - Added logic to store TrafficTypeNames when splitChanges is called in redis mode.

2.1.2 (March 27, 2019)
 - Fixed healthcheck status.

2.1.1 (March 8, 2019)
 - Updated Splits refreshing rate.

2.1.0 (Jan 31, 2019)