@@ -1,4 +1,5 @@
 2.5.3 (October XX, 2019)
+ - Added support for Beacon API for Events and Impressions.
  - Added flag `IPAddressesEnabled` into config to enable/disable sending machineName and machineIp when data is posted in headers.
 
 2.5.2 (September 25, 2019)
